📝 docs: Note Organization

--- a/Note/03机器学习介绍与线性模型.md
+++ b/Note/03机器学习介绍与线性模型.md
@@ -37,9 +37,9 @@
 
 训练数据 vs 测试数据
 
-一个好的机器学习算法
+一个好的机器学习算法：
 
--   不会过拟合 (overfit)
+-   不会过拟合（overfit）
 -   训练数据可以泛化（generalize）到测试数据
 
 ### 机器学习的表现
@@ -73,6 +73,8 @@ $$
 #### 密度估计（Density Estimation）
 
 密度估计是 **估计输入数据概率分布** 的任务。损失函数为负对数似然损失，这里衡量的是模型对真实分布的拟合程度。
+
+密度估计属于 **无监督学习**，它的目标是估计一个变量的概率分布。这不需要标签数据。
 
 **密度估计的负对数似然损失函数**
 
@@ -171,7 +173,7 @@ $$
 \hat{\beta}=( \mathbf{A}^{\mathrm{T}} \mathbf{A} )^{-1} \mathbf{A}^{\mathrm{T}} \mathbf{Y}
 $$
 
-但是，很多情况下，$\mathbf{A}$ 并不可逆，比如 $n < p$ 时，我们可以证明它一定不可逆。而且即使 $\mathbf{A}$ 可逆（此时要求样本个数 $n$ 要大于等于待估参数量 $p$，包含截距项），当它的维度很大时，计算也是很昂贵的。
+但是，很多情况下，$\mathbf{A}$ 并不可逆，比如 $n < p$ 时，我们可以证明它一定不可逆。而且即使 $\mathbf{A}$ 可逆（ **此时要求样本个数 $n$ 要大于等于待估参数量 $p$，包含截距项，同时 $\mathbf{A}^T\mathbf{A}$ 满秩** ），当它的维度很大时，计算也是很昂贵的。
 
 所以，我们可以通过梯度下降法来求解最优的 $\beta$。
 
@@ -255,13 +257,13 @@ $$
 
 对于惩罚项，我们一般有两个选择：
 
--   L1 正则（1 - 范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_1=\sum_{i=1}^n|\beta_i|$
--   L2 正则（2 - 范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_2^2=\sum_{i=1}^n\beta_i^2$​
+-   L1 正则（1 - 范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_1=\sum_{i=1}^n|\beta_i|$，见于 **选择拉普拉斯分布作为先验分布**
+-   L2 正则（2 - 范数）：$\mathrm{pen}(\beta)=\parallel\beta\parallel_2^2=\sum_{i=1}^n\beta_i^2$，见于 **选择高斯分布作为先验分布**
 
 这两个惩罚项的解，具有如下特征：
 
--   **L1 岭回归的正则化项**：$\lambda \sum_{j=1}^{p} \beta_j^2$，这是一个 L2 范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。**有些 $w$ 更小**。
--   **L2 套索回归的正则化项**：$\lambda \sum_{j=1}^{p} |\beta_j|$，这是一个 L1 范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个稀疏解。**非零 $w$​ 更少**。
+-   **L1 套索回归的正则化项**：$\lambda \sum_{j=1}^{p} |\beta_j|$，这是一个 L1 范数，它对所有系数施加相同的惩罚，这会导致一些系数直接为零，从而产生一个 **稀疏解**。**非零 $w$ 更少**。
+-   **L2 岭回归的正则化项**：$\lambda \sum_{j=1}^{p} \beta_j^2$，这是一个 L2 范数，它对大的系数施加更大的惩罚，导致系数平滑地趋近于零。**有些 $w$ 更小**。
 
 简而言之：**岭回归无法剔除变量，套索回归的优良性质是能产生稀疏性，可以将一些不重要的回归系数缩减为 0，达到剔除变量的目的。** [^2]
 
