--- a/Note/04机器学习中的线性回归与分类问题.md
+++ b/Note/04机器学习中的线性回归与分类问题.md
@@ -19,7 +19,7 @@
 
 **用于分类而非回归**。输出 “属于一个分类” 的概率。
 
-逻辑回归是 **有参方法**。它的参数在于线性组合里的各个特征的权重 / 偏置部分。
+逻辑回归是 **有参方法**，它的参数在于线性组合里的各个特征的权重 / 偏置部分。
 
 1. Unit-step function（单位阶跃函数）：这是一个简单的分法，当 $z<0$ 时，$y=0$；当 $z=0$ 时，$y=0.5$；当 $z>0$ 时，$y=1$。
 2. Logistic function（逻辑函数或 Sigmoid 函数）：它是单位阶跃函数的平滑版本，用来代替单位阶跃函数。逻辑函数的公式是 $y = \frac{1}{1 + e^{-z}}$，其中 $e$ 是自然对数的底数，$z$ 通常是特征与权重的线性组合。这个函数将 $z$ 映射到一个 $(0,1)$ 区间内的值，表示概率。
@@ -215,6 +215,10 @@ $$
 
 ![logistic_regression_vs_linear_regression](04机器学习中的线性回归与分类问题.assets/logistic_regression_vs_linear_regression.png)
 
+逻辑回归是分类问题，线性回归是回归问题。
+
+逻辑回归的损失函数是交叉熵函数，线性回归的损失函数是均方差函数。
+
 ### 逻辑回归的局限性
 
 逻辑回归是一个线性分类器，它的决策边界是线性的（当 $w^Tx+b=0$ 时，$f_{w,b}(x)=0.5$，也就是说，$w^Tx+b=0$ 就是决策边界）。这意味着，如果数据的真实分布不是线性可分的（如异或 XOR），那么逻辑回归就无法很好的拟合这个数据。
@@ -229,7 +233,7 @@ $$
 
 我们不能像排序数组一样硬编码一个算法来解决图像分类问题，因而我们通过机器学习，来找到一个函数 $f(x,W)$，其以输入 $x$ 和模型参数 $W$ 为输入，输出一个预测值 $y$。
 
-![矩阵乘法](./04机器学习中的线性回归与分类问题.assets/image.png)
+![image](./04机器学习中的线性回归与分类问题.assets/image.png)
 
 可以看到，$W$ 由 $classes \times features$ 组成，$x$ 由 $features \times 1$ 组成，$b$ 由 $classes \times 1$ 组成。
 
@@ -280,7 +284,7 @@ $$
 
 整个过程的计算方式如下：
 
-![Softmax](./04机器学习中的线性回归与分类问题.assets/image-1.png)
+![image-1](./04机器学习中的线性回归与分类问题.assets/image-1.png)
 
 随后，我们就可以通过梯度下降法来优化损失函数了。而最优参数 $W^*$ 就是使得损失函数最小的参数，也就是我们的优化目标。
 
@@ -292,14 +296,14 @@ $$
 
 ## 最近邻分类器（Nearest Neighbor Classifier）
 
-最近邻分类器：**无参方法（模型没有参数，但是有超参）**，通过计算样本之间的距离来进行预测。
+最近邻分类器：**无参方法（模型没有参数，但是有超参）、监督学习（有分类的标签）**，通过计算样本之间的距离来进行预测。
 
 其中，距离的计算方法可以选择：
 
 -   L1（曼哈顿距离）：$d_1(I_1,I_2)=\sum_p|I_1^p-I_2^p|$
 -   L2（欧氏距离）：$d_2(I_1,I_2)=\sqrt{\sum_p(I_1^p-I_2^p)^2}$
 
-这个算法依赖于超参数（Hyperparameters）的选定：
+这个算法依赖于 **超参数（Hyperparameters）** 的选定：
 
 -   k：选择多少个最近的个样本
 -   距离的计算方法：L1 或 L2
@@ -322,14 +326,14 @@ $$
 
 当数据集较小的时候，我们还可以通过设置不同的折（Fold）来进行交叉验证（Cross Validation）：将整个数据集划分为 $k$ 个大小相同的子集，每次使用其中的 $k-1$ 个子集来训练模型，剩下的一个子集来验证模型。最后，将 $k$ 次的验证结果取平均值，作为最终的验证结果。
 
-我们会选择平均结果最好的超参数。
+我们会选择 **平均结果最好** 的超参数。
 
 ### k - 近邻分类器（KNN）要点总结
 
-- 在图片分类问题中，我们可以从一个图片和标签组成的训练数据集开始，预测测试图片的标签
-- K - 近邻分类器根据最近的 K 个训练数据的标签，来预测测试数据的标签 Distance metric 和 K 是 **超参数**
-- 可以在 **验证数据集（Validation set）** 上选择超参数
-- **最后只在测试数据集上运行一次**
+-   在图片分类问题中，我们可以从一个图片和标签组成的训练数据集开始，预测测试图片的标签
+-   K - 近邻分类器根据最近的 K 个训练数据的 **标签**，来预测测试数据的标签 Distance metric 和 K 是 **超参数**，是 **有监督学习**
+-   可以在 **验证数据集（Validation set）** 上选择超参数
+-   **最后只在测试数据集上运行一次**
 
 ## 聚类
 
@@ -361,3 +365,81 @@ $$
 
 1. **对于种子的选择敏感**，需要尝试不同的初始种子，且尽量让 $k$ 个初始种子互相远离。
 2. **受离群值（Outliers）影响较大**。
+
+## 损失函数总结
+
+**交叉熵损失 (Cross-Entropy Loss)**: 这是处理 **二分类问题** 时最常用的损失函数，它衡量的是模型预测概率分布与真实标签的概率分布之间的差异。适用于输出为概率值且目标是最小化分类错误的场景。
+
+**均方误差损失 (Mean Squared Error Loss):** 通常用于 **回归** 任务，它衡量的是预测值与真实值之间差的平方的平均值。在二分类任务中较少使用，因为它不是针对概率输出设计的。
+
+**Softmax 损失**: 实际上，Softmax 函数通常用于 **多分类** 问题中，它将多个类别的输出转换为概率分布。在二分类中，可以简化为 Logistic 函数。但是，通常我们不单独说 Softmax 损失，而是说 **使用了 Softmax 函数的交叉熵损失**。
+
+**Focal Loss:** 这是一个专为解决类别不平衡问题设计的损失函数。它是交叉熵损失的变体，通过减少易分类样本的权重来增加对难分类样本的关注。在二分类任务中，如果存在极端类别不平衡，可以使用 Focal Loss。
+
+**Dice 损失函数**: Dice 损失函数常用于医学图像分割等领域，特别是在样本不平衡的情况下。它的计算基于 Dice 系数，这是一种衡量两个样本相似性的统计工具。Dice 损失函数的形式是 $1 - \frac{2 \times |X \cap Y|}{|X| + |Y|}$，其中 $X$ 是预测结果，$Y$ 是真实标签，$|X \cap Y|$ 是预测与真实标签的交集，$|X|$ 和 $|Y|$ 分别是预测和真实标签的元素总数。这个损失函数鼓励模型增加预测结果与真实标签的重叠部分。
+
+**Hinge 损失函数**: Hinge 损失通常用于支持向量机（SVM）中，也适用于一些二分类问题。它的目的是找到一个最大化两个类别间隔的决策边界。Hinge 损失的形式是 $\max(0, 1 - y_i \cdot f(x_i))$，其中 $y_i$ 是真实标签（取值为 + 1 或 - 1），$f(x_i)$ 是模型对样本 $x_i$ 的预测值。当预测正确且置信度高（即 $y_i \cdot f(x_i) > 1$）时，损失为 0；否则损失随着错误预测的置信度增加而增加。
+
+也可以参见 [yyHaker / 常见的损失函数（loss function）总结](https://zhuanlan.zhihu.com/p/58883095)
+
+## 监督学习 / 无监督学习总结
+
+### 有监督学习（Supervised Learning）
+
+#### 特点
+
+-   使用标注好的训练数据，即每个样本都有相应的目标输出（标签）。
+-   模型通过学习输入和输出的关系，进行预测或分类。
+-   需要大量的标注数据进行训练。
+
+#### 常见的监督学习
+
+-   **线性回归**：预测房价，输入特征包括房屋面积、位置、年龄等，输出为房价。
+-   **逻辑回归**：二分类问题，如判断邮件是否为垃圾邮件。
+
+### 无监督学习（Unsupervised Learning）
+
+#### 特点
+
+-   使用未标注的训练数据，即样本没有对应的输出标签。
+-   模型试图自行发现数据中的结构和模式。
+-   常用于 **聚类、降维** 等任务。
+
+#### 常见的无监督学习
+
+-   **K - 均值聚类** （K-Means Clustering）：根据特征将数据点聚集成不同的组，如市场细分。
+-   **主成分分析** （PCA）：降维技术，用于数据可视化或预处理。
+-   **自编码器** （Autoencoder）：用于特征提取和降维。
+-   **词嵌入** （Word Embedding）：将单词映射到低维空间，用于自然语言处理。
+-   **密度估计** （Density Estimation）：估计数据的概率密度函数，用于异常检测。注意密度估计既可以是无参数的，也可以是有参数的（假定先验分布）。
+
+## 有参数学习 / 无参数学习总结
+
+### 有参数学习（Parametric Learning）
+
+#### 特点
+
+-   假设函数形式已知，参数数量固定。
+-   学习过程中主要是确定这些参数的最优值。
+-   一旦学习完成，预测新数据时不再需要原始训练数据。
+
+#### 常见的有参数学习
+
+-   **线性回归**：$y = \beta_0 + \beta_1x_1 + \beta_2x_2 + ... + \beta_nx_n$，其中 $\beta_0, \beta_1, ..., \beta_n$ 是需要学习的参数。
+-   **逻辑回归**：$y = \frac{1}{1 + e^{-(\beta_0 + \beta_1x_1 + \beta_2x_2 + ... + \beta_nx_n)}}$，其中 $\beta_0, \beta_1, ..., \beta_n$ 是需要学习的参数。
+-   **词嵌入**：将单词映射到低维空间，通过学习词向量的参数。
+-   **卷积神经网络**：通过学习卷积核的参数，提取图像特征。
+-   **循环神经网络**：通过学习循环层的参数，提取序列数据的特征。
+-   **深度神经网络**：通过学习多层网络的参数，提取复杂的特征。
+
+### 无参数学习（Nonparametric Learning）
+
+#### 特点
+
+-   不对函数形式做出严格假设，参数数量可能随着数据量的增加而增加。
+-   更加灵活，可以拟合复杂的数据结构。
+-   需要更多的数据来避免过拟合。
+
+#### 常见的无参数学习
+
+-   **最近邻分类器**：根据最近的训练数据点来预测新数据点的标签。
