--- a/Note/05神经网络基础.md
+++ b/Note/05神经网络基础.md
@@ -54,7 +54,7 @@ $$
 
 -   Sigmoid 函数
     -   公式：$f(x)=\frac{1}{1+e^{-x}}$
-    -   映射关系：$(-\infty,+\infty) \rightarrow (0,1)$，输出值在 0 到 1 之间，用以表示概率
+    -   映射关系：$(-\infty,+\infty) \rightarrow (0,1)$，输出值在 0 到 1 之间，用以 **表示概率**
 -   Tanh 函数
     -   公式：$f(x)=\frac{e^x-e^{-x}}{e^x+e^{-x}}=\frac{2}{1+e^{-2x}}$
     -   映射关系：$(-\infty,+\infty) \rightarrow (-1,1)$，输出值在 -1 到 1 之间，常用于 **回归任务**
@@ -66,7 +66,7 @@ $$
     -   映射关系：$(-\infty,+\infty) \rightarrow (-\infty,+\infty)$，解决 ReLU 函数中负数部分输出为 0 的问题，其中的 $\alpha$ 是一个小的常数，如 0.01，在 Parametric ReLU 中，这个 $\alpha$ 是一个可学习的参数
 -   Softmax 函数
     -   公式：$f(x_i)=\frac{e^{x_i}}{\sum_{j=1}^n e^{x_j}}$
-    -   映射关系：$(-\infty,+\infty) \rightarrow (0,1)$，输出值在 0 到 1 之间，用以表示概率，使得所有激活值之和为 1
+    -   映射关系：$(-\infty,+\infty) \rightarrow (0,1)$，输出值在 0 到 1 之间，用以 **表示概率**，使得所有激活值之和为 1
 
 ## 多层感知器（Multi-Layer Perceptron, MLP）
 
@@ -77,6 +77,7 @@ $$
 ![mlp](./05神经网络基础.assets/mlp.png)
 
 **注意，$a$ 代表的是激活函数的输出，之前的 $z$ 代表的是加权求和的结果。$a = f(z)$**
+
 $$
 a_k^l
 $$
@@ -98,7 +99,7 @@ $$
 
 优化神经网络的过程，就是通过更新其参数来使得误差尽可能小。
 
-梯度下降（gradient descent）是最常用的优化方法。
+**梯度下降（gradient descent）是最常用的优化方法。**
 
 损失函数的选择：
 
@@ -111,7 +112,6 @@ L_i&=-\log P(Y=y_i|X=x_i)
 $$
 
 这里的 $P(Y=y_i|X=x_i)$ 是指在给定输入 $x_i$ 的情况下，输出 $y_i$ 的概率。这个概率是由神经网络给出的，也就是 $P(Y=y_i|X=x_i)=f(x_i)$，其中 $f$ 是神经网络的输出函数。
-
 
 ### 分类问题：交叉熵损失函数（cross-entropy loss function）
 
@@ -189,6 +189,7 @@ $$
 ### 回归问题：均方误差损失函数（mean squared error loss function，MSE）
 
 MSE 是 $L_{2}$ 范数，往往用来衡量网络输出值 $a$ 和训练数据输出值 $y$ 的差别。
+
 $$
 \text{loss}(Y, f(X)) = (Y - f(X))^2
 $$
@@ -310,8 +311,8 @@ $$
 
 学习率是梯度下降算法中的一个重要超参数，它决定了参数更新的速度。
 
-- 学习率太大会导致参数更新过快，从而错过最优解
-- 学习率太小会导致参数更新过慢，从而训练时间过长
+-   学习率太大会导致参数更新过快，从而错过最优解
+-   学习率太小会导致参数更新过慢，从而训练时间过长
 
 为了解决这个问题，我们可以使用学习率调度（learning rate schedule）来动态调整学习率。学习率调度可以根据训练过程中的不同阶段来调整学习率，例如每隔一定的 epoch 或当损失函数不再下降时。
 
