--- a/Note/06卷积神经网络.md
+++ b/Note/06卷积神经网络.md
@@ -172,7 +172,7 @@ $$
 
 #### 空洞卷积
 
-空洞卷积（dilated convolution）：可以增加感受野而不增加参数数量。这是由于采样变得更加稀疏导致的，在实现上，这对应在卷积核中间插入 0，使得卷积核的感受野变大：
+空洞卷积（dilated convolution）：可以增加感受野而不增加参数数量。这是由于采样变得更加稀疏导致的，在实现上，这对应在卷积核中间插入 0，**使得卷积核的感受野变大**：
 
 ![dilated_convolution](06卷积神经网络.assets/dilated_convolution.png)
 
@@ -200,7 +200,7 @@ $$
 
 其中各参数定义如前。
 
-空洞卷积与反卷积的区别：反卷积（Deconvolution）主要用于增大图像尺寸，是 **上采样（upsampling）** 的一种，而空洞卷积并没有做上采样，**空洞卷积是为了在卷积核中间插入 0**，以增大感受野，它可以不改变图像的大小。**而反卷积是在输入的基础上插入 0**，以此来增大图像的尺寸，从而增大输出的特征图的尺寸。
+空洞卷积与反卷积的区别：反卷积（Deconvolution）主要用于增大图像尺寸，是 **上采样（upsampling）** 的一种，而空洞卷积并没有做上采样，**空洞卷积是为了在卷积核中间插入 0**，以 **增大感受野**，它可以不改变图像的大小。**而反卷积是在输入的基础上插入 0**，以此来增大图像的尺寸，从而 **增大输出的特征图的尺寸**。
 
 ### 3D 卷积
 
