--- a/Note/07卷积神经网络应用.md
+++ b/Note/07卷积神经网络应用.md
@@ -130,7 +130,7 @@ NMS 的步骤是：
 
 -   **迭代**：重复上述过程，直到所有检测框都被评估过，最终得到 **一组没有重叠且置信度较高的检测框** 作为最终的检测结果。
 
-值得注意的是，虽然 NMS 主要关注存在置信度，但在某些情况下，类别置信度或结合置信度也可以用于改进 NMS 的性能。例如，可以对每个类别分别执行 NMS，或者在 NMS 的阈值选择中考虑类别置信度，以更好地平衡不同类别的检测效果。
+值得注意的是，虽然 NMS 主要关注 **存在置信度**，但在某些情况下，类别置信度或结合置信度也可以用于改进 NMS 的性能。例如，可以对每个类别分别执行 NMS，或者在 NMS 的阈值选择中考虑类别置信度，以更好地平衡不同类别的检测效果。
 
 ### SPP Net (Spatial Pyramid Pooling Network)
 
@@ -407,13 +407,13 @@ $$
 > -   **假阴性 (False Negative, FN)** ：预测为负类但实际上是正类的样本。
 
 $$
-    \text{Dice} = \frac{2TP}{2TP + FP + FN}
+\text{Dice} = \frac{2TP}{2TP + FP + FN}
 $$
 
 特别地，当所有值都为 0 和 1 时，公式可以简化为：
 
 $$
-    \text{Dice} = \frac{2|A \cdot B|}{|A| + |B|}
+\text{Dice} = \frac{2|A \cdot B|}{|A| + |B|}
 $$
 
 这里的 $\cdot$ 表示向量或矩阵的点乘操作。
