--- a/Note/08对抗神经网络.md
+++ b/Note/08对抗神经网络.md
@@ -181,7 +181,7 @@ $$
 
 这个解告诉我们，最优的判别器 $D^*$ 在任何点 $x$ 上的值是由真实数据分布 $p_{data}(x)$ 与生成数据分布 $p_g(x)$ 的相对概率决定的。当这两个分布相等时，即 $p_g = p_{data}$，判别器 $D^*$ 将无法区分真实数据与生成数据，此时生成器达到了其最优状态。
 
-所以，当生成器 $G$ 固定时，最优判别器 $D^*$ 的表达式为：
+所以，当生成器 $G$ 固定时，**最优判别器 $D^*$ 的表达式为：**
 
 $$
 D^* = \frac{p_{data}}{p_{g} + p_{data}}
