--- a/Note/09精选生成对抗网络.md
+++ b/Note/09精选生成对抗网络.md
@@ -14,9 +14,11 @@
 
 最经典的一个生成任务就是，输入希望生成的图像类别标签，然后根据这个标签来生成图像，比如控制生成花、生成鸟、或者别的东西。
 
+![cGAN](09精选生成对抗网络.assets/cGAN.png)
+
 ### 损失函数
 
-cGAN 的损失函数如下：
+cGAN 的损失函数如下。
 
 #### 判别器损失 $\mathcal{L}_D$
 
