✨ feat: Note 15,16 & polish Note 14

--- a/Note/14对抗搜索.md
+++ b/Note/14对抗搜索.md
@@ -95,28 +95,21 @@ $$
 -1,1,-1,1,-1,1,-1,1,\ldots
 $$
 
-```c
-function GetValue(node, α, β)
-    if node is a Leaf node then
-        return the result of the game
-    end if
-    v ← -∞
-    for each y ∈ Subnodes(node) do
-        v ← max(v, -GetValue(y, -β, -max(α, v)))
-        if v > β then
-            return v
-        end if
-    end for
-    return v
-end function
-```
+![minimax_pesudo_code_concise](14对抗搜索.assets/minimax_pesudo_code_concise.png)
 
-其中核心一句在 `v ← max(v, -GetValue(y, -β, -max(α, v)))`，这句话会不断地颠倒上下界，从而使得一个一直取上界的 `GetValue` 函数等价于原先的交替取上下界的版本。
+其中核心一句在 `v ← max(v, -GetValue(y))`，这句 `-GetValue(y)` 中的负号会不断地颠倒 `max` 操作的实际上取方向，从而使得一个一直上取的 `GetValue` 函数等价于原先的交替上下取的版本。
 
-极大极小搜索算法采用 **深度优先搜索算法**。假设搜索树的深度是 $m$，每个结点有 $b$ 个合法操作，则极大极小算法的时间复杂度是 $O(b^m)$​。空间复杂度如下：
+若依据此写法，则实际上并没显性的 Max 节点和 Min 节点的区分了。而是仅仅根据从根节点迭代到当前节点，一共乘了几次负号来判断（不包含当前节点的 `v ← max(v, -GetValue(y))` 中的负号）：
+
+-   如果乘的是偶数次负号，则是 Max 节点
+-   如果乘的是奇数次负号，则是 Min 节点
+
+极大极小搜索算法采用 **深度优先搜索算法** （递归调用 `GetValue` 函数直至抵达代表终止状态的叶节点，意味着深度优先）。假设搜索树的深度是 $m$，每个结点有 $b$ 个合法操作，则极大极小算法的时间复杂度是 $O(b^m)$​。空间复杂度如下：
 
 -   展开所有儿子结点：$O(b^m)$
 -   只展开一个儿子：$O(m)$
+
+这意味着在真实的复杂对弈中，此模型并不实用。
 
 ## 记忆与估值
 
@@ -125,7 +118,7 @@ end function
 -   **死记硬背学习**：直接使用之前极大极小搜索的计算结果对每步进行估值。
 -   **一般化学习**：通过 **参数化** 的估值函数，不断调整参数以缩小计算 **估值** 和实际评价的差距。
 
-这种学习方法带来了 AI 水平的突破性进展。深蓝和 AlphaGo 都是上述第二种算法的演化版本，利用参数化模型预测真实估值。
+这种学习方法带来了 AI 水平的突破性进展（不同于类似全局估值表这样的字典，一般化学习实际上使用了更少的参数来表示估值函数，大大提高了同硬件水平下的性能）。深蓝和 AlphaGo 都是上述第二种算法的演化版本，利用参数化模型预测真实估值。
 
 > 这里的估值，可以理解为先前神经网络中，你训练得到的推理结果。
 >
@@ -139,34 +132,40 @@ Alpha-Beta 剪枝算法在搜索时返回与极大极小搜索相同的结果，
 
 ### 伪代码
 
-```c
-function ALPHA-BETA-SEARCH(state) returns an action
-    v ← MAX-VALUE(state, -∞, +∞)
-    return the action in ACTIONS(state) with value v
-```
+$$
+\begin{array}{l}
+\textbf{function} \ \text{ALPHA-BETA-SEARCH}(state) \ \textbf{returns} \ \text{an action} \\
+\quad v \leftarrow \text{MAX-VALUE}(state, -\infty, +\infty) \\
+\quad \textbf{return} \ \text{the action in} \ \text{ACTIONS}(state) \ \text{with value} \ v
+\end{array}
+$$
 
+-   **初始条件**：最大下界 $\alpha$ 设置为 $-\infin$，最小上界 $\beta$ 设置为 $+\infin$。
 -   这个函数是搜索的入口。它接受当前的状态节点 `state`，并调用 `MAX-VALUE` 函数开始搜索
--   初始条件：最大下界 $\alpha$ 设置为 $-\infin$，最小上界 $\beta$ 设置为 $+\infin$。
--   由于我们要最大化自己的效益函数，所以通过 `MAX-VALUE` 函数来遍历当前节点的子节点（以及更多的后继节点），`MAX-VALUE` 函数返回的是一个价值 $v$，我们根据这个 $v$ 找到对应的动作 `action`。
+-   由于我们要最大化自己的效益函数，所以通过 `MAX-VALUE` 函数来遍历当前节点的子节点（以及更多的后继节点），`MAX-VALUE` 函数返回的是一个价值 $v$，我们根据这个 $v$​ 找到对应的动作 `action`。
 
-```c
-function MAX-VALUE(state, α, β) returns a utility value
-    if TERMINAL-TEST(state) then return UTILITY(state)
-    v ← -∞
-    for each a in ACTIONS(state) do
-        v ← MAX(v, MIN-VALUE(RESULT(state, a), α, β))
-        if v ≥ β then return v
-        α ← MAX(α, v)
-    return v
-```
+$$
+\begin{array}{l}
+\textbf{function} \ \text{MAX-VALUE}(state, \alpha, \beta) \ \textbf{returns} \ \text{a utility value} \\
+\quad \textbf{if} \ \text{TERMINAL-TEST}(state) \ \textbf{then return} \ \text{UTILITY}(state) \\
+\quad v \leftarrow -\infty \\
+\quad \textbf{for each} \ a \ \textbf{in} \ \text{ACTIONS}(state) \ \textbf{do} \\
+\quad \quad v \leftarrow \max(v, \text{MIN-VALUE}(\text{RESULT}(s, a), \alpha, \beta)) \\
+\quad \quad \textbf{if} \ v \geq \beta \ \textbf{then return} \ v \\
+\quad \quad \alpha \leftarrow \max(\alpha, v) \\
+\quad \textbf{return} \ v \\
+\end{array}
+$$
 
--   初始条件：如果当前状态是终止状态（`TERMINAL-TEST(state)`），直接返回状态的效用值 `UTILITY(state)`。
+-   **传入参数**：当前状态 `state`，当前状态的最大下界 $\alpha$，当前状态的最小上界 $\beta$。
 
--   初始化：将 $v$ 初始化为 $-\infin$，因为我们现在是在 Max 层，所以我们的目标是不断的 **最大化下界** 以提高我们的效用函数的输出，这对应了后续的更新 $\alpha$ 的操作。
+-   **初始条件**：如果当前状态是终止状态（`TERMINAL-TEST(state)`），直接返回状态的效用值 `UTILITY(state)`。
 
--   遍历动作：对每个可能的动作 `a`，计算该动作结果状态的价值。这个结果状态通过 `MIN-VALUE` 函数评估。注意，与 `MAX-VALUE` 函数相对，`MIN-VALUE` 函数代表对手，其目标是不断地 **最小化上界** 以削弱我们效益函数的输出。在这个循环遍历的过程中，我们会不断的更新 $v$​，它指示本层可能拿到的最大值。
+-   **初始化**：将 $v$ 初始化为 $-\infin$，因为我们现在是在 Max 层，所以我们的目标是不断的 **最大化下界** 以提高我们的效用函数的输出，这对应了后续的更新 $\alpha$ 的操作。
 
--   **剪枝条件**：如果本层可能拿到的最大值 $v$ 的值已经累进到大于或等于 $\beta$，则可以停止继续评估剩下的动作，直接返回 $v$。这是因为我们是一个 `MAX-VALUE` 函数节点，我们会在下一层的 `MIN-VALUE` 节点们提供的输出中选择一个，而 **下一层的 `MIN-VALUE` 节点们提供的最小上界 $\beta$ 中最大的一个会被选择为当前层的最大下界 $\alpha$** 。而继续搜寻剩余的 `MIN-VALUE` 节点只有可能提供更小的 $\beta$，这于我们更新 $\alpha$​ 无益。
+-   **遍历动作**：对每个可能的动作 `a`，计算该动作结果状态的价值。这个结果状态通过 `MIN-VALUE` 函数评估。注意，与 `MAX-VALUE` 函数相对，`MIN-VALUE` 函数代表对手，其目标是不断地 **最小化上界** 以削弱我们效益函数的输出，`MIN-VALUE` 返回的是下一层能拿到的 **最小上界**。在这个循环遍历的过程中，我们会不断的更新 $v$，它指示本层可能拿到的 **最大值**。
+
+-   **剪枝条件**：如果当前状态可能拿到的最大值 $v$ 的值已经累进到大于或等于传入的当前最小上界 $\beta$，则可以停止继续评估剩下的动作，直接返回 $v$。这是因为当前层是一个 `MAX-VALUE` 层，我们返回的状态价值必然大于等于 $v$ ，当前层的上一层（若有）又是一个 `MIN-VALUE` 层，它不可能在已知有更小可能的 $\beta$ 下选择当前节点的返回值。所以本节点于更新上层状态节点的估值完全无益了，提前返回可以实现剪枝，避免多余的计算。
 
     ![beta_pruning](14对抗搜索.assets/beta_pruning.png)
 
@@ -180,22 +179,26 @@ function MAX-VALUE(state, α, β) returns a utility value
     >
     > 这样将节点 D 的后继兄弟节点减去称为 Beta 剪枝。[^1]
 
--   更新 $\alpha$：如果 $v$ 大于当前的 $\alpha$，则更新 $\alpha$，即 `α ← MAX(α, v)`。
+-   更新 $\alpha$：如果上述剪枝条件没有满足，那么意味着我们找到了一个更大的 $v$，我们更新当前的最大下界 $\alpha$，即 $\alpha \leftarrow \max(\alpha, v)$。
 
--   最后，返回 $v$​​。
+    要注意在整个过程中 $\alpha,\beta$ 的作用域，$\beta$ 一直不变，$\alpha$ 在动作迭代间改变，方便 `Min-Value` 函数用于剪枝。
+
+-   最后，返回 $v$​​，它代表本节点能够获得的最大效益。
 
 **这里建议参照 [OI Wiki / Alpha-Beta 剪枝](https://oi-wiki.org/search/alpha-beta/) 的具体图例理解。**
 
-```c
-function MIN-VALUE(state, α, β) returns a utility value
-    if TERMINAL-TEST(state) then return UTILITY(state)
-    v ← +∞
-    for each a in ACTIONS(state) do
-        v ← MIN(v, MAX-VALUE(RESULT(state, a), α, β))
-        if v ≤ α then return v
-        β ← MIN(β, v)
-    return v
-```
+$$
+\begin{array}{l}
+\textbf{function} \ \text{MIN-VALUE}(state, \alpha, \beta) \ \textbf{returns} \ \text{a utility value} \\
+\quad \textbf{if} \ \text{TERMINAL-TEST}(state) \ \textbf{then return} \ \text{UTILITY}(state) \\
+\quad v \leftarrow +\infty \\
+\quad \textbf{for each} \ a \ \textbf{in} \ \text{ACTIONS}(state) \ \textbf{do} \\
+\quad \quad v \leftarrow \min(v, \text{MAX-VALUE}(\text{RESULT}(s, a), \alpha, \beta)) \\
+\quad \quad \textbf{if} \ v \leq \alpha \ \textbf{then return} \ v \\
+\quad \quad \beta \leftarrow \min(\beta, v) \\
+\quad \textbf{return} \ v \\
+\end{array}
+$$
 
 -   分析类似上面 `MAX-VALUE` 的情形。
 
@@ -213,26 +216,35 @@ function MIN-VALUE(state, α, β) returns a utility value
 
 ### 剪枝条件总结 [^1]
 
--   当一个 Min 节点的 $β$ 值 ≤ 任何一个父节点的 $α$ 值时 ，剪掉该节点的所有子节点
--   当一个 Max 节点的 $α$ 值 ≥ 任何一个父节点的 $β$ 值时 ，剪掉该节点的所有子节点
+-   当一个 Min 节点的 $v$ 值 ≤ 任何一个祖先节点的最大上界 $α$ 时 ，剪掉该节点及其所有子节点
+-   当一个 Max 节点的 $v$ 值 ≥ 任何一个祖先节点的最小上界 $β$ 时 ，剪掉该节点及其所有子节点
 
 ### 二合一伪代码
 
-```c
-function GetValue(node, α, β)
-    if node is a Leaf node then
-        return the result of the game
-    end if
-    v ← -∞
-    for each y ∈ Subnodes(node) do
-        v ← max(v, -GetValue(y, -β, -max(α, v)))
-        if v > β then
-            return v
-        end if
-    end for
-    return v
-end function
-```
+$$
+\begin{array}{l}
+\textbf{function} \ \text{GET-VALUE}(node, \alpha, \beta) \\
+\quad \textbf{if} \ node \ \text{is a Leaf node} \ \textbf{then} \\
+\quad \quad \textbf{return} \ \text{the result of the game} \\
+\quad \textbf{end if} \\
+\quad v \leftarrow -\infty \\
+\quad \textbf{for each} \ y \ \in \ \text{Subnodes}(node) \ \textbf{do} \\
+\quad \quad v \leftarrow \max(v, -\text{GET-VALUE}(y, -\beta, -\max(\alpha, v))) \\
+\quad \quad \textbf{if} \ v > \beta \ \textbf{then} \\
+\quad \quad \quad \textbf{return} \ v \\
+\quad \quad \textbf{end if} \\
+\quad \textbf{end for} \\
+\quad \textbf{return} \ v \\
+\textbf{end function} \\
+\end{array}
+$$
+
+同样是仿照先前的思路，我们依旧是通过不断的变号、颠倒上下界来完成合并。
+
+注意，在这个过程中 $\alpha$ 实际上不会改变。这对应了无论是在 `Max-Value` 还是在 `Min-Value` 中，实际上都有一侧的界没有更新：
+
+-   在 `Max-Value` 中，我们不断的更新最大下界 $\alpha$，而最小上界 $\beta$ 一直是不变的。
+-   在 `Min-Value` 中，我们不断的更新最小上界 $\beta$，而最大下界 $\alpha$ 一直是不变的。
 
 ### 复杂度分析
 
@@ -241,8 +253,8 @@ end function
 1. 节点展开情况：
 
     - 第一层：每个节点生出 $b$ 个儿子
-    - 第二层：每个节点生出 1 个儿子
-    - 第三层：每个节点生出 $b$ 个儿子
+    - 第二层：每个节点生出 1 个儿子，其他节点全都在此节点获得到界值后被剪枝
+    - 第三层：每个节点生出 $b$ 个儿子，这对应上一层中第 1 个儿子获得界值的过程
     - 依次类推，一层 $b$、一层 1、一层 $b$...
 
     ![best_situation_of_alpha_beta_pruning](14对抗搜索.assets/best_situation_of_alpha_beta_pruning.png)
@@ -256,7 +268,7 @@ end function
 
 #### 最差情况
 
-在最差情况下，Alpha-beta 剪枝算法并不能减少任何节点的评估数量。这种情况发生在节点按照最差顺序进行搜索时，即每次都先访问最不优的节点。其时间复杂度与 Minimax 算法相同，为：$O(b^m)$
+在最差情况下，Alpha-beta 剪枝算法并不能减少任何节点的评估数量。这种情况发生在节点按照最差顺序进行搜索时，即每次都先访问最不优的节点，导致完全没有任何剪枝发生。其时间复杂度与 Minimax 算法相同，同为：$O(b^m)$
 
 #### 平均情况
 
@@ -264,18 +276,33 @@ end function
 
 ## 不完美的实时决策
 
--   传统方法：minimax 或 alpha-beta 算法直接搜索到终局状态（叶子节点），计算准确的胜负。
--   改进方法：用启发式函数 `Cutoff Test` 在非叶子节点 **进行估值，从而提前截断搜索**。从而避免一直要搜索到叶子节点才能使用 `Terminal Test`
+-   传统方法：Minimax 或 Alpha-beta 算法都需要直接搜索到终局状态（叶子节点），计算准确的胜负，这对于搜索树很深的情况并不好。
+-   改进方法：用启发式函数 `EVAL` 在非叶子节点 **进行估值，从而提前截断搜索**。也即，在没有搜索到终局状态时，若满足一定条件（`Cutoff Test`），提前使用 `EVAL` 给出一个返回值，从而避免一直要（深度）搜索到叶子节点（即满足 `Terminal Test`）才能使用真实效用函数 `UTILITY`，加快计算效率。
 
 ### 状态估值函数的特性
 
--   **终局状态估值函数和真实得分的一致性**：在游戏的终局状态，状态估值函数必须给出与真实得分一致的值。这意味着当游戏结束时，估值函数应该准确反映当前局面的得分情况。
+-   **终局状态估值函数和真实得分的一致性**：在游戏的终局状态，状态估值函数必须给出与真实得分一致的值。这意味着当游戏结束时，估值函数应该准确反映当前局面的得分情况。也即，此时必须有 `EVAL == UTILITY`
 -   **计算效率**：估值函数的计算不能花费太多时间。
--   **强相关性**：非终局条件下，估值函数在非终局状态下要与最终胜负有强相关性。
+-   **强相关性**：非终局条件下，估值函数在非终局状态下要与最终胜负有很 **强的正相关性**。
 
-采用线性加权函数作为状态估值函数的效果并不好，因为他假设每个特征的贡献是独立的，以及是可以线性估值的，但是在真实情况中，这都是不一定的。
+### 状态估值函数的设计
 
-因而，我们可以采用先前的机器学习方法来学到一个的非线性的复杂估值函数，从而拟合真实情况。
+一个很自然的想法是，设计各种特征，并对特征进行线性加权，从而获得一个状态估值函数：
+
+$$
+\mathrm{EVAL}(s)=w_1 f_1(s)+w_2 f_2(s)+\cdots+w_n f_n(s)=\sum_{i=1}^n w_i f_i(s)
+$$
+
+但是，采用线性加权函数作为状态估值函数的效果并不好，因为他假设每个特征的贡献是 **独立** 的，以及是可以线性估值的，但是在真实情况中，这都是不一定的：
+
+-   不同的特征之间可能有复杂的相互影响，导致非独立性
+-   估值函数可能不是平滑线性变化的
+
+而且，手工设计特征和特征权重，实际上是基于人为提供的 **先验经验** 的，且不说其是否准确可用，对于一些游戏，甚至不一定有。
+
+因而，我们可以采用先前的机器学习方法来学到一个的 **非线性** 的复杂估值函数，从而拟合真实情况。
+
+### 状态估值函数的应用
 
 当我们有了状态估值函数后，我们就可以用 cutoff test 替代 terminal test，提前返回估值函数 `eval` 的值来加快搜索。
 
@@ -287,7 +314,7 @@ if CUTOFF-TEST(state, depth) then return EVAL(state)
 ```
 
 -   在搜索深度达到搜索深度限制 $d$ 时，调用 `eval` 函数返回估值。
--   如果不确定深度，可以使用迭代加深方法。等时间限制到了再停止搜索。
+-   如果不好确定深度，可以使用 **迭代加深** 方法。当深度限制到了，算法返回搜索到的最深一层所返回的值。若深度限制到了但没找到终局，就让深度限制大一点，继续搜索。
 -   估值函数还可以用来对子结点排序，好的节点排在前面，可以提升 Alpha-Beta 剪枝的效率。
 
 $$
@@ -299,21 +326,52 @@ $$
 \end{cases}
 $$
 
+### 小结
+
+实时决策：指在规定时间内给出决策结果。例如下棋时，需要在走子时限内做出决策。
+
+不完美的实施决策：问题规模很大的时候，受限于时间限制，我们 **无法搜索到终局**，也就无从准确的胜负情况，因此决策是不完美的。
+
+解决方法：
+
+1. 使用 **启发式状态估值函数** 来估计当前状态的价值
+2. 限定搜索深度，到了一定深度就截断搜索
+3. 难以确定搜索深度，则可以采用迭代加深的方法。在时间允许范围内逐步加深搜索深度，直到到达时限
+
+状态估值函数：
+
+1. 可以采用经验定义，或者机器学习的方法
+2. 搜到终局的时候必须采用真的得分，否则返回估计值
+3. 状态估值函数影响决策好坏
+4. 可用于 **子节点排序**，提升 Alpha-Beta 剪枝的效率
+
 ## 蒙特卡洛树搜索
 
-蒙特卡洛方法是一种统计模拟方法，通过大量采样来获得概率估计。这种方法依赖于概率论中的大数定律，即大量重复实验的平均结果将接近于某个确定值。其 **不是** 一个严格意义上的算法。
+蒙特卡洛方法（Monte Carlo method）是一种 **统计模拟** 方法，通过大量采样来获得概率估计。这种方法依赖于概率论中的大数定律，即大量重复实验的平均结果将接近于某个确定值。其 **不是** 一个严格意义上的算法。
 
-> 大数定律：
->
-> $$
-> \lim_{n \to \infty} \frac{1}{n} \sum_{i=1}^{n} X_i = E(X)
-> $$
+大数定律：
+
+$$
+\lim_{n \to \infty} \frac{1}{n} \sum_{i=1}^{n} X_i = E(X)
+$$
+
+特点：**统计方法**，计算能力越强，性能越好。
+
+优点：即使在没有领域知识的情况下也能使用。因为它绕过了人为设定好的状态估值函数这一困难很大的步骤，而是基于大量的随机采样来估计状态的价值。
 
 ### 纯随机蒙特卡洛方法
 
-纯随机蒙特卡洛方法采用上述模拟思想，运用 **随机搜索** 策略。
+先前的决策方法依赖于状态估值函数的设计，但是很难设计一个好的状态估值函数。
+
+所以，我们可以直接进行对弈模拟（双方策略都是随机下），即在决策空间中随机采样，根据采样的结果来评估状态价值（如计算平均胜率），然后据此来排序子节点。
+
+纯随机蒙特卡洛方法正是采用了上述模拟思想，运用 **随机搜索** 策略，通过大量随机模拟来估计当前状态的价值。
+
+通过这种方式，纯随机蒙特卡洛方法能够有效地在复杂搜索空间中找到较优解，而无需人为设计的状态估值函数。
 
 #### 算法过程
+
+![mcts_algorithm](14对抗搜索.assets/mcts_algorithm.png)
 
 1. **节点选择**：在当前节点下，存在 N 个可能的后继儿子节点。
 2. **估值计算**：
@@ -330,26 +388,26 @@ $$
 
 ### 蒙特卡洛树搜索
 
-蒙特卡洛树搜索（Monte Carlo Tree Search，MCTS）则是一种通过在决策空间中（模拟）随机采样，并根据结果构建搜索树来在给定域中寻找最优决策的方法。它是一种启发式搜索算法，用于决策树搜索问题。
+蒙特卡洛树搜索（Monte Carlo Tree Search，MCTS）也是一种通过在决策空间中（模拟）随机采样，并根据结果 **构建搜索树** 来在给定域中寻找最优决策的方法。
 
-蒙特卡洛树搜索基于 **统计方法**，计算能力越强，性能越好。其优点在于即使在没有领域知识的情况下也能使用。这绕过了人为设定好的状态估值函数这一困难很大的步骤，而是基于大量的随机采样来估计状态的价值。
+与前文纯随机的蒙特卡洛算法不同，MCTS 结合了 **树搜索**，能够 **记住之前的模拟结果**，并利用这些信息来指导未来的搜索，从而避免无效的重复搜索并专注于更有前景的分支。
 
-与上述纯随机的蒙特卡洛算法不同，MCTS 结合了树搜索，能够记住之前的模拟结果，并利用这些信息来指导未来的搜索，从而避免无效的重复搜索并专注于更有前景的分支。
+换句话说，他不会在一条分支下无限下探，在对一条分支的搜索中，他会不断地更新这条分支的价值，一旦其他分支的价值更高，它会转向搜索其他分支。
 
-换句话说，他不会在一条分支下无限下探，在对一条分支的搜索中，他会不断地更新这条分支的价值，一旦其他分支的价值更高，它会转向搜索其他分支。而纯随机的蒙特卡洛算法则会一直在一条分支下搜索后继子孙节点，不可能转向其他分支。
+而纯随机的蒙特卡洛算法直接就没有搜索树的概念，它就是直接暴力模拟所有可选动作，然后选择胜率最好的那个。
 
 ![mcts_search_tree](14对抗搜索.assets/mcts_search_tree.png)
 
 #### 算法过程
 
-1. **选择（Selection）**：从根节点开始，使用子节点 **树策略** 递归向下选择节点，直到找到一个非终止且未访问的子节点。
+1. **选择（Selection）**：从 **根节点** 开始，使用子节点 **树策略** 递归向下选择节点，直到找到一个非终止且未访问的子节点。
 2. **扩张（Expansion）**：根据可选择的动作，添加一个或多个子节点来展开树。
-3. **模拟（Simulation）**：从被选择的节点开始，使用默认策略进行动作选择和状态转换，直到达到终止状态。
+3. **模拟（Simulation）**：从被选择的节点开始，使用 **默认策略** 进行动作选择和状态转换，直到达到终止状态。蒙特卡洛搜索树会根据模拟结果进行更新。
 4. **反向传播（Backup）**：更新与被选择节点及其祖先节点相关的统计信息。
 
 #### 树策略（Tree Policy）与默认策略（Default Policy）
 
-**树策略** 是蒙特卡洛树搜索（MCTS）中用于选择节点的策略，其核心在于平衡探索（Exploration）和利用（Exploitation）：
+**树策略** 是蒙特卡洛树搜索（MCTS）中用于 **选择下一个要模拟的节点** 的策略，其核心在于平衡探索（Exploration）和利用（Exploitation）：
 
 -   **探索**：旨在检查尚未充分了解的区域，以发现新的可能性。
 -   **利用**：侧重于使用已知且预期效果最佳的区域，以优化当前的选择。
@@ -358,9 +416,9 @@ $$
 
 > 树策略不一定是完全只看模拟胜率的贪心！
 
-树策略负责在蒙特卡洛树搜索（MCTS）的 **选择和扩张** 阶段，从现有的搜索树中选择节点并创建新的叶节点。这一过程是基于当前树的状态和可能的未来收益来决定路径的。
+**树策略**：负责在蒙特卡洛树搜索（MCTS）的 **选择和扩张** 阶段，从现有的搜索树中选择节点并创建新的叶节点。这一过程是基于当前树的状态和可能的未来收益来决定路径的。
 
-**默认策略** 则是在模拟阶段发挥作用，它从一个非终止状态开始，通过不断模拟游戏直至结束，从而得到一个价值评估。这个评估帮助 MCTS 确定哪些路径可能更有价值。**默认策略是对原先状态估值函数的替换。**
+**默认策略**：在 **模拟阶段** 发挥作用，它从一个非终止状态开始，通过不断模拟游戏直至结束，从而得到一个价值评估。这个评估帮助 MCTS 确定哪些路径可能更有价值。**默认策略是对原先状态估值函数的替换。**
 
 ### UCT 算法
 
@@ -368,9 +426,25 @@ UCT（Upper Confidence Bound for Trees）算法是一种蒙特卡洛树搜索（
 
 ![uct_pesudo_code](14对抗搜索.assets/uct_pesudo_code.png)
 
+可以看到，这里实际上有时间 / 步数限制的，实际上搜索得越久、估值越准。
+
 ![uct_pesudo_code_2](14对抗搜索.assets/uct_pesudo_code_2.png)
 
+可以发现，如果一个节点是非终止状态，那么：
+
+1. 如果存在未访问过的子节点，那么优先展开未访问过的子节点
+2. 如果子节点都探索过了，使用 `BestChild` 算法来获得一个子节点，移动到这个子节点，然后继续递归循环
+
+循环终止的条件是下列之一：
+
+1. 找到一个完全未探索的子节点
+2. 当前节点是终止状态
+
+注意到循环条件中，1 比较容易满足，而 2 对于对局很深的游戏几乎不可能满足，所以说实际运算时，**其实无法将整棵搜索树完整地构建出来**。只需建出访问过的节点所构成的这部分搜索树，并在需要访问子节点时 **计算出应该访问哪一个就行** （先用几次 `BestChild` 然后根据 1 返回一个未被展开过的节点，继续探索）
+
 ![uct_pesudo_code_3](14对抗搜索.assets/uct_pesudo_code_3.png)
+
+对于终止状态，采用默认策略来进行模拟，然后进行反向传播更新搜索树。
 
 #### UCB 公式
 
@@ -382,10 +456,14 @@ $$
 \text{UCB} = \frac{Q(v')}{N(v')} + c \sqrt{\frac{2 \ln N(v)}{N(v')}}
 $$
 
--   $\frac{Q(v')}{N(v')}$ （图中的 $Q(v')/N(v')$）代表 **利用（exploitation）**，即节点 $v'$ 的平均价值，其中 $Q(v')$ 是节点 $v'$ 的总价值（例如，获胜的次数），$N(v')$ 是节点 $v'$ 被访问的次数。这一项反映了节点 $v'$ 当前的表现，鼓励算法利用已知的好走法。
+$\frac{Q(v')}{N(v')}$ 代表 **利用（exploitation）**，即节点 $v'$ 的平均价值，其中 $Q(v')$ 是节点 $v'$ 的总价值（例如，获胜的次数），$N(v')$ 是节点 $v'$ 被访问的次数。这一项反映了节点 $v'$ 当前的表现，**鼓励算法利用已知的好走法**。
 
--   $c \sqrt{\frac{2 \ln N(v)}{N(v')}}$ （图中的 $c \sqrt{\frac{2 \ln N(v)}{N(v')}}$）代表 **探索（exploration）**，其中 $c$ 是探索参数，$N(v)$ 是父节点 $v$ 的访问次数。这一项 **鼓励算法探索那些访问次数较少的节点**。
+$c \sqrt{\frac{2 \ln N(v)}{N(v')}}$ 代表 **探索（exploration）**，其中 $c$ 是探索参数，$N(v)$ 是父节点 $v$ 的访问次数。这一项 **鼓励算法探索那些访问次数较少的节点**。
 
-在 `BestChild` 函数中，算法会遍历所有子节点 $v'$，计算每个节点的 UCB 值，并选择 UCB 值最大的节点作为最佳子节点。这样，算法就能在已知的好走法和潜在的未知走法之间进行权衡，从而有效地进行树的搜索。
+在 `BestChild` 函数中，算法会遍历所有子节点 $v'$​​，计算每个节点的 UCB 值，并选择 UCB 值最大的节点作为最佳子节点。这样，算法就能在已知的好走法和潜在的未知走法之间进行权衡，从而有效地进行树的搜索。
+
+## 参考
+
+[ouuan / 蒙特卡洛树搜索（MCTS）学习笔记](https://ouuan.github.io/post/monte-carlo-tree-search/)：强推，讲的 MCTS 应该比我这篇好。
 
 [^1]: https://www.cnblogs.com/devilmaycry812839668/p/15782087.html
